# VRM-model

./: README.md  pyproject.toml
.github/workflows/: vrm-ci.yml  vrm-data-build.yml  vrm-eval.yml  vrm-pod-debug.yml  vrm-pod-destroy.yml  vrm-pod-status.yml  vrm-r2-delete-state.yml  vrm-r2-progress.yml  vrm-r2-state.yml  vrm-release.yml  vrm-train-grpo.yml  vrm-train-sft.yml
configs/data/: rl_recipe.yaml  sft_recipe.yaml
docker/: dataprep.Dockerfile  eval.Dockerfile  train.Dockerfile
scripts/: pod-entrypoint.sh
src/vrm/data/: build.py  cli.py  distill.py  filter.py  schema.py
src/vrm/data/normalize/: __init__.py  _base.py  _driver.py  _llava_convo.py  chartqa.py  geo170k.py  geometry3k.py  geoqa.py  mathv360k.py  mavis.py  tabmwp.py  vision_r1_cold.py
src/vrm/infra/: budget.py  r2.py  runpod.py
src/vrm/train/: inference.py  stage3_sample.py
tests/unit/: test_data_build.py  test_data_cli.py  test_distill_credit.py  test_filter.py  test_inference_backend.py  test_normalize_base.py  test_normalize_driver.py  test_normalizers_smoke.py  test_r2.py  test_runpod_client.py
